# mars_rover_systems

basic_ros2_extra_files/plant_detector/: alien_plant_detector_ros2_node.py  plant_detector.cpp  plant_detector.hpp  plant_detector_ros2_node.py  predict_enhanced_no_warnings.py
basics_ros2_multithreading/: CMakeLists.txt
basics_ros2_multithreading/launch/: green_detector_node.launch.py  plant_detector_multithreading.launch.py  plant_detector_multithreading_callbackgroups.launch.py
basics_ros2_multithreading/src/: callback_function.cpp  callback_spinonce_function.cpp  function.cpp  green_detector_node.cpp  green_test.cpp  plant_detector.cpp  plant_detector_multithreading.cpp  plant_detector_multithreading_callbackgroups.cpp
install/basics_ros2_multithreading/share/basics_ros2_multithreading/: local_setup.sh  package.sh  package.xml
install/basics_ros2_multithreading/share/basics_ros2_multithreading/launch/: callback_function.launch.py  plant_detector.launch.py
install/mars_rover_systems/lib/mars_rover_systems/: heartbeat_executable  heartbeat_executable2  temperaturemonitor_executable
install/mars_rover_systems/share/mars_rover_systems/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/mars_rover_systems/share/mars_rover_systems/cmake/: mars_rover_systemsConfig.cmake
install/mars_rover_systems/share/mars_rover_systems/launch/: start_mars_rover_systems.launch.py
install/mars_rover_tasks/lib/mars_rover_tasks/: publish_mars_rover_move_executable
install/mars_rover_tasks/share/ament_index/resource_index/package_run_dependencies/: mars_rover_tasks
install/mars_rover_tasks/share/mars_rover_tasks/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/mars_rover_tasks/share/mars_rover_tasks/launch/: obstacle_detector.launch.py
log/: latest_build
mars_rover_systems/: CMakeLists.txt  package.xml
mars_rover_systems/launch/: two_rover_heartbeat.launch.py
mars_rover_systems/mars_rover_systems/: package.xml
mars_rover_systems/src/: heartbeat.cpp  heartbeat_shutdown.cpp  temperature_monitor.cpp
mars_rover_tasks/: CMakeLists.txt
mars_rover_tasks/src/: autonomous_exploration.cpp  plant_detector_node.cpp  publish_mars_rover_move.cpp  subscriber_obstacle_detector.cpp
src/: heartbeat2.cpp
topics_quiz/: CMakeLists.txt  package.xml
topics_quiz/launch/: topics_quiz.launch.py
topics_quiz/src/: topics_quiz.cpp
